<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/urlLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/url_dilog_background"
    android:layout_margin="@dimen/_10sdp">

    <ImageView
        android:id="@+id/urlIcon"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_add_link"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:tint="@color/colorBackgroundDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/urlTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/righteous"
        android:text="@string/add_url"
        android:textColor="@color/colorBackgroundDark"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toEndOf="@id/urlIcon"
        app:layout_constraintTop_toTopOf="@id/urlIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/urlIcon"/>

    <EditText
        android:id="@+id/inputUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/righteous"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_link"
        android:inputType="textUri"
        android:textColor="@color/colorBackgroundDark"
        android:textSize="@dimen/_13ssp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/urlIcon"/>

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/righteous"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorButton"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputUrl"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/righteous"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="CANCEL"
        android:textColor="@color/colorButton"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputUrl" />


</androidx.constraintlayout.widget.ConstraintLayout>